# api/swagger/swagger.yaml
@@ -116,6 +116,177 @@ paths:
       x-tags:
       - tag: "Stack"
       x-swagger-router-controller: "api.controllers.stack_controller"
+
+  /network:
+    get:
+      tags:
+      - "Network"
+      summary: "Obtain a list of defined networks"
+      description: ""
+      operationId: "get_networks"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "swarm"
+        description: "Swarm which is being queried for networks"
+        required: true
+        schema:
+          $ref: "#/definitions/Swarm"
+      responses:
+        200:
+          description: "OK"
+      x-tags:
+      - tag: "Network"
+      x-swagger-router-controller: "api.controllers.network_controller"
+    post:
+      tags:
+      - "Network"
+      summary: "Create a network with the given name"
+      description: ""
+      operationId: "create_network"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      # - name: "swarm"
+      #   in: "body"
+      #   description: "Swarm on which network will be created"
+      #   required: true
+      #   schema:
+      #     $ref: "#/definitions/Swarm"
+      - name: "network"
+        in: "body"
+        description: "Definition of network to be created"
+        required: true
+        schema:
+          $ref: "#/definitions/Network"
+
+      responses:
+        201:
+          description: "OK"
+      x-tags:
+      - tag: "Network"
+      x-swagger-router-controller: "api.controllers.network_controller"
+
+  /network/delete:
+    delete:
+      tags:
+      - "Network"
+      summary: "Remove network with given name"
+      description: ""
+      operationId: "delete_network"
+      produces:
+      - "application/json"
+      parameters:
+      # - name: "swarm"
+      #   in: "body"
+      #   description: "Swarm on which network will be created"
+      #   required: true
+      #   schema:
+      #     $ref: "#/definitions/Swarm"
+      - name: "network"
+        in: "body"
+        description: "Network to be removed"
+        required: true
+        schema:
+          $ref: "#/definitions/Network"
+      responses:
+        200:
+          description: "OK"
+      x-tags:
+      - tag: "Network"
+      x-swagger-router-controller: "api.controllers.network_controller"
+
+
+  /volume:
+    get:
+      tags:
+      - "Volume"
+      summary: "Obtain a list of defined volumes"
+      description: ""
+      operationId: "get_volumes"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "swarm"
+        description: "Swarm which is being queried for volumes"
+        required: true
+        schema:
+          $ref: "#/definitions/Swarm"
+      responses:
+        200:
+          description: "OK"
+      x-tags:
+      - tag: "Network"
+      x-swagger-router-controller: "api.controllers.volume_controller"
+    post:
+      tags:
+      - "Volume"
+      summary: "Create a volume with the given name"
+      description: ""
+      operationId: "create_volume"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      # - name: "swarm"
+      #   in: "body"
+      #   description: "Swarm on which network will be created"
+      #   required: true
+      #   schema:
+      #     $ref: "#/definitions/Swarm"
+      - name: "volume"
+        in: "body"
+        description: "Definition of volume to be created"
+        required: true
+        schema:
+          $ref: "#/definitions/Volume"
+
+      responses:
+        201:
+          description: "OK"
+      x-tags:
+      - tag: "Volume"
+      x-swagger-router-controller: "api.controllers.volume_controller"
+
+  /volume/delete:
+    delete:
+      tags:
+      - "Volume"
+      summary: "Remove volume with given name"
+      description: ""
+      operationId: "delete_volume"
+      produces:
+      - "application/json"
+      parameters:
+      # - name: "swarm"
+      #   in: "body"
+      #   description: "Swarm on which network will be created"
+      #   required: true
+      #   schema:
+      #     $ref: "#/definitions/Swarm"
+      - name: "volume"
+        in: "body"
+        description: "Volume to be removed"
+        required: true
+        schema:
+          $ref: "#/definitions/Volume"
+      responses:
+        200:
+          description: "OK"
+      x-tags:
+      - tag: "Volume"
+      x-swagger-router-controller: "api.controllers.volume_controller"
+
+
 definitions:
   Stack:
     type: "object"
@@ -155,3 +326,38 @@ definitions:
         type: "string"
       cert-key:
         type: "string"
+  Network:
+    type: "object"
+    required:
+    - "engine-url"
+    - "name"
+    properties:
+      engine-url:
+        type: "string"
+      ca-cert:
+        type: "string"
+      cert:
+        type: "string"
+      cert-key:
+        type: "string"
+      name:
+        type: "string"
+
+  Volume:
+    type: "object"
+    required:
+    - "engine-url"
+    - "name"
+    properties:
+      engine-url:
+        type: "string"
+      ca-cert:
+        type: "string"
+      cert:
+        type: "string"
+      cert-key:
+        type: "string"
+      name:
+        type: "string"
+
+
