# swarm/network.py
@@ -20,6 +20,8 @@ import docker.errors
 
 import logging
 
+from typing import List
+
 logger = logging.getLogger(__name__)
 
 
@@ -55,7 +57,7 @@ class Network(object):
     def __repr__(self):
         return "<Network: {}>".format(self.name)
 
-    def create(self, client: DockerClient)-> bool:
+    def create(self, client: DockerClient)-> (bool, Exception):
         try:
             client.networks.create(name=self.name,
                                    driver=self.driver,
@@ -64,20 +66,20 @@ class Network(object):
                                    check_duplicate=self.check_duplicate,
                                    internal=self.internal,
                                    labels=self.labels)
-            return True
-        except docker.errors.APIError as err:
+            return True, None
+        except Exception as err:
             logger.info("Error creating network {0} - error message: {1}"
                         .format(self.name, err))
-            return False
+            return False, err
 
-    def remove(self, client: DockerClient) -> bool:
+    def remove(self, client: DockerClient) -> (bool, Exception):
         try:
             n = client.networks.list(names=self.name)
             print("Networks Found: {0}".format(n))
             n[0].remove()
-            return True
-        except docker.errors.APIError:
-            return False
+            return True, None
+        except Exception as err:
+            return False, err
 
     def _initialize_network(self):
         self._network_labels()
@@ -109,3 +111,67 @@ class Network(object):
             for lb in lbs:
                 label_dict.update(lb)
             self.labels = label_dict
+
+
+def get_networks(docker_client: DockerClient) -> (BaseException, List):
+    '''
+    First incarnation of this just returns the list of networks
+    defined on the swarm master.
+    '''
+
+    try:
+        networks = docker_client.networks.list()
+        return_val = []
+        for n in networks:
+            return_val.append({'name': n.name, 'id': n.id})
+        return None, return_val
+    except docker.errors.APIError as err:
+        logger.info(
+            "Error obtaining list of networks from swarm - error message: {1}"
+            .format(err))
+        return err, None
+
+
+def create_network(docker_client: DockerClient, name: str) -> bool:
+    '''
+    Create a network based on basic inputs provided.
+    '''
+    n = Network(name)
+
+    # return_val is True or False
+    return_val = n.create(docker_client)
+
+    return return_val
+
+
+def delete_network(docker_client: DockerClient, name: str) -> (bool, Exception):
+    '''Remove a network from the Swarm.
+    '''
+
+    err, networks = get_networks(docker_client)
+
+    print('Networks = {0}'.format(str(networks)))
+
+    if err is None:
+        # look for the network in the list
+        found = False
+        for n in networks:
+            print('looking for {0} - current network {1}'.format(name, n['name']))
+            if n['name'] == name:
+                # remove this network
+                net = docker_client.networks.get(n['id'])
+                net.remove()
+                found = True
+
+    return found, err
+
+    # def get_node_list_by_role(role: str):
+    #     return docker_client.nodes.list(filters={'role': role})
+
+    # manager_list = list(
+    #     map(_filter_node_info, get_node_list_by_role('manager'))
+    # )
+    # worker_list = list(
+    #     map(_filter_node_info, get_node_list_by_role('worker'))
+    # )
+    # return {'managers': manager_list, 'workers': worker_list}
