# swarm/volume.py
@@ -19,6 +19,8 @@ from docker import DockerClient
 import docker.errors
 import logging
 
+from typing import List
+
 logger = logging.getLogger(__name__)
 
 
@@ -80,3 +82,68 @@ def remove_volume(vol_name: str, client: DockerClient) -> bool:
         logger.info("Problem removing volume {0} - error message: {1}"
                     .format(vol_name, err))
         return False
+
+
+def get_volumes(docker_client: DockerClient) -> (BaseException, List):
+    '''
+    First incarnation of this just returns the list of networks
+    defined on the swarm master.
+    '''
+
+    try:
+        volumes = docker_client.volumes.list()
+        return_val = []
+        for v in volumes:
+            return_val.append({'name': v.name, 'id': v.id})
+        return None, return_val
+    except docker.errors.APIError as err:
+        logger.info(
+            "Error obtaining list of networks from swarm - error message: {1}"
+            .format(err))
+        return err, None
+
+
+def create_volume(docker_client: DockerClient, name: str) -> (bool, Exception):
+    '''
+    Create a network based on basic inputs provided.
+    '''
+    v = Volume(name)
+
+    # return_val is True or False
+    return_val = v.create(docker_client)
+
+    return return_val, None
+
+
+# def delete_network(docker_client: DockerClient, name: str) -> (bool, Exception):
+#     '''Remove a network from the Swarm.
+#     '''
+
+#     err, networks = get_networks(docker_client)
+
+#     print('Networks = {0}'.format(str(networks)))
+
+#     if err is None:
+#         # look for the network in the list
+#         found = False
+#         for n in networks:
+#             print('looking for {0} - current network {1}'.format(name, n['name']))
+#             if n['name'] == name:
+#                 # remove this network
+#                 net = docker_client.networks.get(n['id'])
+#                 net.remove()
+#                 found = True
+
+#     return found, err
+
+#     # def get_node_list_by_role(role: str):
+#     #     return docker_client.nodes.list(filters={'role': role})
+
+#     # manager_list = list(
+#     #     map(_filter_node_info, get_node_list_by_role('manager'))
+#     # )
+#     # worker_list = list(
+#     #     map(_filter_node_info, get_node_list_by_role('worker'))
+#     # )
+#     # return {'managers': manager_list, 'workers': worker_list}
+
